# swquery

./: .gitignore  Cargo.toml  README.md  SWQuery.code-workspace  a  justfile  result.json  rustfmt.toml
ai-agent/: .env.example  .gitignore  Dockerfile  main.py  requirements.txt
ai-agent/configs/: settings.py
ai-agent/controllers/: __init__.py
ai-agent/controllers/query/: query_controller.py
ai-agent/middlewares/: api_key_middleware.py
ai-agent/services/query/: query_service.py
credit-sales/: Cargo.toml
credit-sales/src/: constants.rs  errors.rs  lib.rs
credit-sales/src/instructions/: buy_credits.rs  mod.rs  refund_credits.rs  withdraw_usdc.rs
credit-sales/src/state/: credits_account.rs  mod.rs
credit-sales/src/tests/: buy_credits_test.rs  mod.rs  refund_credits_test.rs  withdraw_usdc_test.rs
deployment/: compose.yml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/hooks/: useTokenAccess.ts
frontend/src/app/pitchdeck/: page.tsx
frontend/src/app/program/: page.tsx
frontend/src/app/real-time-monitor/: page.tsx
frontend/src/app/socket/: page.tsx
frontend/src/app/soon/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/videodemo/: page.tsx
frontend/src/components/: SolanaWalletProvider.tsx  TransactionPreview.tsx
frontend/src/components/Atoms/: CoreFeaturesSection.tsx  FeatureSection.tsx  SDKArchitectureSection.tsx
frontend/src/components/Atoms/AvaiableSoon/: index.tsx
frontend/src/components/Atoms/CardComponent/: index.tsx
frontend/src/components/Atoms/ChatModal/: index.tsx
frontend/src/components/Atoms/CodeExample/: index.tsx
frontend/src/components/Atoms/FeatureSection/: index.tsx
frontend/src/components/Atoms/PricingModal/: index.tsx
frontend/src/components/Atoms/SectionItem/: index.tsx
frontend/src/components/Atoms/TokenCard/: index.tsx
frontend/src/components/Atoms/TokenDisplay/: TokenDisplay.tsx
frontend/src/components/Atoms/TokenLaunchCard/: index.tsx
frontend/src/components/Atoms/TutorialModal/: index.tsx
frontend/src/components/Atoms/TypeWriterMarkdown/: index.tsx
frontend/src/components/Atoms/WalletCard/: index.tsx
frontend/src/components/Atoms/WebSocketComponent/: index.tsx
frontend/src/components/Molecules/AgentSelect/: index.tsx
frontend/src/components/Molecules/CreditSidebar/: index.tsx
frontend/src/components/Molecules/Demo/History/: index.tsx
frontend/src/components/Molecules/Landing/Footer/: index.tsx
frontend/src/components/Molecules/Landing/Intro/: index.tsx
frontend/src/components/Molecules/Landing/Intro/Explanation/: index.tsx
frontend/src/components/Molecules/Landing/Section/: index.tsx
frontend/src/components/Molecules/Navbar/: index.tsx
frontend/src/components/Molecules/SearchTokenPreview/: index.tsx
frontend/src/components/Molecules/Sidebar/: index.tsx
frontend/src/components/Molecules/TokenLaunchTab/: index.tsx
frontend/src/components/Molecules/TokenTab/: index.tsx
frontend/src/components/Molecules/TransactionPrev/: TransactionPreview.tsx
frontend/src/components/Molecules/TrendingTokenPreview/: index.tsx
frontend/src/components/Molecules/WalletTab/: index.tsx
frontend/src/components/Organisms/Demo/: index.tsx
frontend/src/components/Organisms/Landing/: index.tsx
frontend/src/components/Organisms/Maintence/: index.tsx
frontend/src/components/Organisms/PitchDeck/: index.tsx
frontend/src/components/Organisms/VideoDemo/: index.tsx
frontend/src/components/ui/: input.tsx
frontend/src/providers/: SolanaWalletProvider.tsx
frontend/src/services/: agent.ts  credits.ts  program.ts  users.ts  wallet.ts
frontend/src/services/config/: api.ts
frontend/src/utils/: constants.tsx
frontend_test/: package-lock.json  package.json
frontend_test/app/: page.tsx
sdk/: Cargo.toml
sdk/src/: client.rs  errors.rs  lib.rs  utils.rs
sdk/src/llm/: mod.rs  transformer.rs
sdk/src/models/: transactions.rs
sdk/src/parser/: bytecode.rs  json.rs  mod.rs
server/: Cargo.toml  Dockerfile  README.md  a  example_frontend_integration.md  output.json  output.md  test.sh
server/database/: init.sql
server/deployment/: compose.yml
server/src/: db.rs  main.rs
server/src/middlewares/: mod.rs  rate_limiter.rs
server/src/models/: chat.rs  credits.rs  mod.rs  package.rs  query.rs  token.rs  user.rs
server/src/routes/: agent.rs  chatbot.rs  credits.rs  mod.rs  packages.rs  social.rs  token.rs  users.rs  websocket.rs
server/src/utils/: mod.rs
swquery/: Cargo.toml  README.md  test.sh
swquery/src/: client.rs  errors.rs  lib.rs  utils.rs
swquery/src/llm/: mod.rs  transformer.rs
swquery/src/models/: mod.rs  trending.rs
test-ts/: README.md  package.json
test-ts/tests/: test-ts.test.ts
