[workspace]
resolver = "2"
members = [
    "sdk",
    "credit-sales"
]
exclude = ["frontend"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Marcelo G Feitoza <feitoza.marcelo7@gmail.com>", "Victor Carvalho <victordecarvalho342@gmail.com>", "Arthur Bretas <arthurbretas1@gmail.com>"]
repository = "https://github.com/vict0rcarvalh0/swquery"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
