[package]
name = "sdk"
version = "0.0.1"
edition = "2021"
description = "A natural language query for solana wallets"
authors = [
    "Arthur Bretas <arthurbretas1@gmail.com>",
    "Marcelo G Feitoza <feitoza.marcelo7@gmail.com>",
    "Pedro Hagge Baptista <pedro.baptista@sou.inteli.edu.br>",
    "Victor Carvalho <victordecarvalho342@gmail.com>",
]
repository = "https://github.com/vict0rcarvalh0/swquery"

[lib]
name = "swquery"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = "0.11"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.9"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
tower = { version = "0.5.1", features = ["util"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
tower-http = { version = "0.6.1", features = ["trace"] }
solana-sdk = "2.0.8"
