[package]
name = "sdk"
version = "0.0.1"
edition = "2021"
description = "A natural language query for solana wallets"
authors = [
    "Arthur Bretas <arthurbretas1@gmail.com>",
    "Marcelo G Feitoza <feitoza.marcelo7@gmail.com>",
    "Pedro Hagge Baptista <pedro.baptista@sou.inteli.edu.br>",
    "Victor Carvalho <victordecarvalho342@gmail.com>",
]
repository = "https://github.com/vict0rcarvalh0/swquery"

[lib]
name = "swquery"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
tower-http = { workspace = true }
solana-sdk = { workspace = true }
futures = "0.3.31"
