[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing-subscriber.workspace = true
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
http-body-util = { workspace = true }
solana-sdk = { workspace = true }
reqwest.workspace = true
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.8.5"
sdk = { path = "../sdk", version = "0.0.1" }

[dev-dependencies]
tower = { workspace = true }
